# langextract-openrouter

./: README.md  pyproject.toml  test_plugin.py
examples/: Basic.ipynb
langextract_openrouter/: __init__.py  provider.py
