[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langextract-openrouter"
version = "0.1.0"
description = "LangExtract provider plugin for openrouter"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "langextract>=1.0.0",
    # Add your provider's SDK dependencies here
    "openai>=1.101.0",
]

[project.entry-points."langextract.providers"]
openrouter = "langextract_openrouter.provider:openrouterLanguageModel"

[tool.setuptools.packages.find]
where = ["."]
include = ["langextract_openrouter*"]
